--- a/templates/clock.html
+++ b/templates/clock.html
@@ -168,10 +168,11 @@
         </select>
     </div>
 
-    <div class="buttons">
-        <button onclick="alert('Thank you for your support!')">Support the creator ☕</button>
-        <button onclick="alert('Check the documentation to host it yourself!')">Host it myself 🏗️</button>
-    </div>
+<div class="buttons">
+    <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Support the creator ☕</button>
+    <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Host it myself 🏗️</button>
+</div>
+
 
     <script>
         function updateClock() {
