--- a/templates/clock.html
+++ b/templates/clock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Live Clock</title>
+    <title>Simple Live Clock</title>
     <style>
         body {
             display: flex;
@@ -169,10 +169,9 @@
     </div>
 
     <div class="buttons">
-    <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Support the creator ☕</button>
-    <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Host it myself 🏗️</button>
+        <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Support the creator ☕</button>
+        <button onclick="window.open('https://github.com/driveloader/FlaskSimpleClock', '_blank')">Host it myself 🏗️</button>
     </div>
-
 
     <script>
         function updateClock() {
